[UPD] uws set roles/desktop
Adds the custom temperature module for waybar.

--- a/lib/ansible_collections/local/uws/roles/desktop/templates/waybar/hyprland.style.css
+++ b/lib/ansible_collections/local/uws/roles/desktop/templates/waybar/hyprland.style.css
@@ -226,11 +226,13 @@ label:focus {
   background-color: #ffa000;
 }
 
-#temperature {
+#temperature,
+#custom-temperature {
   background-color: #f0932b;
 }
 
-#temperature.critical {
+#temperature.critical,
+#custom-temperature.critical {
   background-color: #eb4d4b;
 }
 
